--- a/config/config.yaml
+++ b/config/config.yaml
@@ -3,7 +3,7 @@ training_pipeline_config:
   artifact_dir: artifact
 
 data_ingestion_config:
-  dataset_download_url: https://archive.ics.uci.edu/ml/machine-learning-databases/00275/
+  dataset_download_url: https://raw.githubusercontent.com/satyazmx/dataset/main/hour.csv
   raw_data_dir: raw_data
   tgz_download_dir: tgz_data
   ingested_dir: ingested_data
