--- a/config/config.yaml
+++ b/config/config.yaml
@@ -3,12 +3,12 @@ training_pipeline_config:
   artifact_dir: artifact
 
 data_ingestion_config:
-  dataset_download_url: https://raw.githubusercontent.com/satyazmx/dataset/main/hour.csv
+  dataset_download_url: https://github.com/satyazmx/dataset/blob/main/hours.csv
   raw_data_dir: raw_data
   tgz_download_dir: tgz_data
   ingested_dir: ingested_data
   ingested_train_dir: train
-  ingested_test_dir: test 
+  ingested_test_dir: test
 
 
 
